# mscProjectFinal-

./: CMakeLists.txt  README.md
include/: fileManager.h  initialise.h  test.cuh  triangle.h
src/: fileManager.cpp  initialise.cpp  main.cpp  triangle.cpp  vector_addition.cu
